opam-version: "2.0"
maintainer: "Markus Mottl <markus.mottl@gmail.com>"
authors: [ "Markus Mottl <markus.mottl@gmail.com>" ]
license: "LGPL-2.1+ with OCaml linking exception"
homepage: "https://mmottl.github.io/res"
doc: "https://mmottl.github.io/res/api"
dev-repo: "git+https://github.com/mmottl/res.git"
bug-reports: "https://github.com/mmottl/res/issues"

build: [
  ["dune" "subst"] {pinned}
  ["dune" "build" "-p" name "-j" jobs]
]

depends: [
  "ocaml" {>= "4.04"}
  "dune" {>= "1.7.0"}
  "base-bytes"
]

synopsis: "RES - Library for resizable, contiguous datastructures"

description: """
RES is a library containing resizable arrays, strings, and bitvectors."""
